20211209 JCL EventBus and Navigation

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -3,3 +3,11 @@ appTitle=SAPUI5 Template
 appDescription=App Template to implement your own project
 
 title=SAPUI5 Template
+
+# Main View
+buttonEventBusMain1=Event Bus Main 1
+buttonEventBusMain2=Event Bus Main 2
+
+# Detail View
+buttonEventBusDetail1=Event Bus Detail using exactly same button from Main View
+buttonEventBusDetail2=Event Bus Detail sending Data to Main controller
